# Smart-Home

./: CMakeLists.txt  EXAMPLE_INPUT_SEQUENCE.txt  Makefile  README.md  main.cpp
command/: Command.h  CommandManager.cpp  CommandManager.h  SetTemperatureCommand.cpp  SetTemperatureCommand.h  TurnOffCommand.cpp  TurnOffCommand.h  TurnOnCommand.cpp  TurnOnCommand.h
composite/: DeviceGroup.cpp  DeviceGroup.h  DeviceLeaf.cpp  DeviceLeaf.h  IComponent.h
devices/: Camera.cpp  Camera.h  DoorLock.cpp  DoorLock.h  IDevice.h  Light.cpp  Light.h  MotionSensor.cpp  MotionSensor.h  Thermostat.cpp  Thermostat.h
facade/: SmartHomeFacade.cpp  SmartHomeFacade.h
factory/: DeviceFactory.h  GenericFactory.cpp  GenericFactory.h
observer/: DeviceObserverAdapter.cpp  DeviceObserverAdapter.h  IObserver.h  ISubject.h
state/: LightState.cpp  LightState.h
strategy/: AutomationContext.cpp  AutomationContext.h  AutomationMode.h  ComfortMode.cpp  ComfortMode.h  EnergySavingMode.cpp  EnergySavingMode.h
